force-app/main/default/objects/Provision__c/fields/Other_Negotiated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Negotiated_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Other Negotiated Terms</label>
    <type>TextArea</type>
</CustomField>