force-app/main/default/objects/Provision__c/fields/Other_Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Non_Standard_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Other Non-Standard Terms</label>
    <type>TextArea</type>
</CustomField>