force-app/main/default/objects/Provision__c/fields/OTN__c.field-meta.xml
<CustomField>
    <fullName>OTN__c</fullName>
    <description>Created for Contract Management.</description>
    <label>OTN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>