force-app/main/default/objects/Provision__c/fields/P_O_or_Check__c.field-meta.xml
<CustomField>
    <fullName>P_O_or_Check__c</fullName>
    <label>P.O. Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>