force-app/main/default/objects/Provision__c/fields/Payment_1_to_UPSLT_USD__c.field-meta.xml
<CustomField>
    <fullName>Payment_1_to_UPSLT_USD__c</fullName>
    <label>Payment #1 to RTI (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>