force-app/main/default/objects/Provision__c/fields/Payment_2_to_UPSLT_USD__c.field-meta.xml
<CustomField>
    <fullName>Payment_2_to_UPSLT_USD__c</fullName>
    <label>Payment #2 to RTI (USD)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>