force-app/main/default/objects/Provision__c/fields/Payment_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_3_Days__c</fullName>
    <label>Payment #3 (# Days after Delivery)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>