force-app/main/default/objects/Provision__c/fields/Payment_4_to_UPSLT_if_applicable_USD__c.field-meta.xml
<CustomField>
    <fullName>Payment_4_to_UPSLT_if_applicable_USD__c</fullName>
    <inlineHelpText>Payment #4&apos;s USD due to RTI after the Total Software amount has been divided into the RTI and VAR portions and converted to USD using the exchange rate</inlineHelpText>
    <label>Payment #4 to RTI (USD)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>