force-app/main/default/objects/Provision__c/fields/Payment_Due_with_Contract__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_with_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if a deposit is required at the time of contract.</inlineHelpText>
    <label>Payment Due with Contract</label>
    <type>Checkbox</type>
</CustomField>