force-app/main/default/objects/Provision__c/fields/Payment_Due_With_Contract_RNT__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_With_Contract_RNT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Due With Contract (RNT)</label>
    <type>Checkbox</type>
</CustomField>