force-app/main/default/objects/Provision__c/fields/Payment_Terms_QES__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_QES__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>15 Days Prior Shipment</fullName>
            </value>
            <value>
                <fullName>30 Days Prior Shipment</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>45 Days After Quarter Ends</fullName>
            </value>
            <value>
                <fullName>Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 15 Days</fullName>
            </value>
            <value>
                <fullName>Net 20 Days</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
                <default>true</default>
                <label>Net 30 Days</label>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
            <value>
                <fullName>Net 7 Days</fullName>
            </value>
            <value>
                <fullName>No Payment Terms were Established For this Contract</fullName>
            </value>
            <value>
                <fullName>Pre-pay or LC (equipment) and Net 30 (software)</fullName>
            </value>
            <value>
                <fullName>Pre-payment or Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Upfront Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>