force-app/main/default/objects/Provision__c/fields/Payment_Type_to_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_to_UPSLT__c</fullName>
    <label>Payment Type to RTI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>