force-app/main/default/objects/Provision__c/fields/Pending_SLA__c.field-meta.xml
<CustomField>
    <fullName>Pending_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Sub-License Agreement (SLA)</label>
    <type>Checkbox</type>
</CustomField>