force-app/main/default/objects/Provision__c/fields/Per_Day_Consulting_Fee_Quoted_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Consulting_Fee_Quoted_UPSLT__c</fullName>
    <label>Per Day Consulting Fee Quoted (RTI)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>