force-app/main/default/objects/Provision__c/fields/PO_Amount_RNT__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount_RNT__c</fullName>
    <label>PO Amount (RNT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>