force-app/main/default/objects/Provision__c/fields/Price_Guarantee_Details__c.field-meta.xml
<CustomField>
    <fullName>Price_Guarantee_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Price Guarantee Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>