force-app/main/default/objects/Provision__c/fields/Price_Increase_Cap__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Cap__c</fullName>
    <label>Price Increase Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>