force-app/main/default/objects/Provision__c/fields/Price_Increase_Notice_Period_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Notice_Period_in_Days__c</fullName>
    <label>Price Increase Notice Period (in Days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>