force-app/main/default/objects/Provision__c/fields/Price_Increases_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Price_Increases_Y_N__c</fullName>
    <label>Price Increases (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>