force-app/main/default/objects/Provision__c/fields/Prime_or_Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Prime_or_Sub_Contractor__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Prime or Sub Contractor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Sub Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>