force-app/main/default/objects/Provision__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amended License</fullName>
            </value>
            <value>
                <fullName>Amended Software Basis</fullName>
            </value>
            <value>
                <fullName>Existing Customer, Existing Product</fullName>
            </value>
            <value>
                <fullName>Existing Customer, License Compliance</fullName>
            </value>
            <value>
                <fullName>Existing Customer, License Transfer</fullName>
            </value>
            <value>
                <fullName>Existing Customer, New Product</fullName>
            </value>
            <value>
                <fullName>Existing Customer, Prof. to Ent. Upgrade</fullName>
            </value>
            <value>
                <fullName>Existing Customer, Reactivation</fullName>
            </value>
            <value>
                <fullName>Existing customer, Renewal</fullName>
            </value>
            <value>
                <fullName>Existing Customer, Term Renewal</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Hardware &amp; Services</fullName>
            </value>
            <value>
                <fullName>Int. Term</fullName>
            </value>
            <value>
                <fullName>Maintenance Consolidation</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Partner License</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (Add-On)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (Back Up / Testing Copy)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (License Re-activation - former customer)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (License Transfer)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (License Upgrade)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (Map Upgrade)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (New Customer)</fullName>
            </value>
            <value>
                <fullName>Perpetual SW (Partner License)</fullName>
            </value>
            <value>
                <fullName>Prior Customer, Reactivation</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Subscription SW (Add On)</fullName>
            </value>
            <value>
                <fullName>Subscription SW (New Customer)</fullName>
            </value>
            <value>
                <fullName>Subscription SW (Renewal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>