force-app/main/default/objects/Provision__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Project #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>