force-app/main/default/objects/Provision__c/fields/Provision_ID_TCM__c.field-meta.xml
<CustomField>
    <fullName>Provision_ID_TCM__c</fullName>
    <description>Created for Contract Management.</description>
    <externalId>true</externalId>
    <label>Provision ID (TCM)</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>