force-app/main/default/objects/Provision__c/fields/Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Party__c</fullName>
    <label>Related Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>