force-app/main/default/objects/Provision__c/fields/Related_Party_Details__c.field-meta.xml
<CustomField>
    <fullName>Related_Party_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Related Party Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>