force-app/main/default/objects/Provision__c/fields/Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rate__c</fullName>
    <label>Renewal Rate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>