force-app/main/default/objects/Provision__c/fields/Replacement_Or_Addon__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Or_Addon__c</fullName>
    <label>Replacement Or Addon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Addition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>