force-app/main/default/objects/Provision__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Reseller</label>
    <length>40</length>
    <type>Text</type>
</CustomField>