force-app/main/default/objects/Provision__c/fields/Retention_Toolkit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Retention_Toolkit_Terms__c</fullName>
    <inlineHelpText>This field is available read-only for data migration purposes.  You do not need to enter this for any new Provisions.</inlineHelpText>
    <label>Retention Toolkit Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>