force-app/main/default/objects/Provision__c/fields/RNT_Fee_Schedule_3__c.field-meta.xml
<CustomField>
    <fullName>RNT_Fee_Schedule_3__c</fullName>
    <label>RNT Fee (Schedule 3)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>