force-app/main/default/objects/Provision__c/fields/RNT_Hardware_Total__c.field-meta.xml
<CustomField>
    <fullName>RNT_Hardware_Total__c</fullName>
    <label>RNT Hardware Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>