force-app/main/default/objects/Provision__c/fields/RNT_Units__c.field-meta.xml
<CustomField>
    <fullName>RNT_Units__c</fullName>
    <label>RNT Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>