force-app/main/default/objects/Provision__c/fields/SBA_Plan_Prepared__c.field-meta.xml
<CustomField>
    <fullName>SBA_Plan_Prepared__c</fullName>
    <description>Created for Contract Management.</description>
    <label>SBA Plan Prepared</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>