force-app/main/default/objects/Provision__c/fields/Service_and_or_Data_Plan_Discounts_Not__c.field-meta.xml
<CustomField>
    <fullName>Service_and_or_Data_Plan_Discounts_Not__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Service &amp; Data Plan Discounts &amp; Notes</label>
    <type>TextArea</type>
</CustomField>