force-app/main/default/objects/Provision__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Service Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asset Service &amp; Asset Reefer</fullName>
            </value>
            <value>
                <fullName>Asset Service Plan</fullName>
            </value>
            <value>
                <fullName>Base Plan</fullName>
            </value>
            <value>
                <fullName>CEV Service</fullName>
            </value>
            <value>
                <fullName>Compliance Bundle with Macros</fullName>
            </value>
            <value>
                <fullName>Enhanced Plan</fullName>
            </value>
            <value>
                <fullName>Enhanced Plan w/ Fleet Averaging</fullName>
            </value>
            <value>
                <fullName>Enhanced Plan w/ Volume Message Rate Tiers</fullName>
            </value>
            <value>
                <fullName>Eval Service</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor Plus Base Plan</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor Plus Enhanced Plan</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor Plus Standard Plan</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor Plus Volume Plan</fullName>
            </value>
            <value>
                <fullName>Foundation Plan (MCP100S)</fullName>
            </value>
            <value>
                <fullName>LTL Plan</fullName>
            </value>
            <value>
                <fullName>MCP110 Compliance Plan (1yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Compliance Plan (3yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Compliance Plan (5yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 HOS Integration Plan (1yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 HOS Integration Plan (3yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 HOS Integration Plan (5yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Performance Monitoring Integration Plan (1yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Performance Monitoring Integration Plan (3yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Performance Monitoring Integration Plan (5yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance Plan (1yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance Plan (3yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance Plan (5yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance w/ Dispatch Integration Plan (1yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance w/ Dispatch Integration Plan (3yr)</fullName>
            </value>
            <value>
                <fullName>MCP110 Safety &amp; Compliance w/ Dispatch Integration Plan (5yr)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>