force-app/main/default/objects/Provision__c/fields/Services_or_Software_Terms__c.field-meta.xml
<CustomField>
    <fullName>Services_or_Software_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Services or Software Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>