force-app/main/default/objects/Provision__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAR (fill in details below)</fullName>
            </value>
            <value>
                <fullName>Sub-VAR (fill in details below)</fullName>
            </value>
            <value>
                <fullName>Customer (fill in details below)</fullName>
            </value>
            <value>
                <fullName>Other (requires details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>