force-app/main/default/objects/Provision__c/fields/Shipment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Shipment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOB Origin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>