force-app/main/default/objects/Provision__c/fields/SLA_Credit__c.field-meta.xml
<CustomField>
    <fullName>SLA_Credit__c</fullName>
    <label>SLA Credit</label>
    <type>TextArea</type>
</CustomField>