force-app/main/default/objects/Provision__c/fields/SLApercentage__c.field-meta.xml
<CustomField>
    <fullName>SLApercentage__c</fullName>
    <label>SLA %</label>
    <length>10</length>
    <type>Text</type>
</CustomField>