force-app/main/default/objects/Provision__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <description>Created for Contract Management</description>
    <label>Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FleetAdvisor</fullName>
            </value>
            <value>
                <fullName>JTRACS</fullName>
            </value>
            <value>
                <fullName>Message Abbreviator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>QTRACS/36</fullName>
            </value>
            <value>
                <fullName>QTRACS/400</fullName>
            </value>
            <value>
                <fullName>QTRACS/LAN</fullName>
            </value>
            <value>
                <fullName>QTRACS/Portal</fullName>
            </value>
            <value>
                <fullName>QTRACS/UNV</fullName>
            </value>
            <value>
                <fullName>QTRACS/Web</fullName>
            </value>
            <value>
                <fullName>QTRACS/WIN</fullName>
            </value>
            <value>
                <fullName>SensorTRACS/400</fullName>
            </value>
            <value>
                <fullName>SensorTRACS/WIN</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS/400</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS/Portal</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS/WIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>