force-app/main/default/objects/Provision__c/fields/Software_Amount__c.field-meta.xml
<CustomField>
    <fullName>Software_Amount__c</fullName>
    <inlineHelpText>Total software dollars due from customer after discounts and before any payments are made</inlineHelpText>
    <label>Software Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>