force-app/main/default/objects/Provision__c/fields/Software_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Software_Discounts__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Software Discounts</label>
    <type>TextArea</type>
</CustomField>