force-app/main/default/objects/Provision__c/fields/Software_MFN__c.field-meta.xml
<CustomField>
    <fullName>Software_MFN__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Software MFN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>