force-app/main/default/objects/Provision__c/fields/Sole_Source_or_Competitive__c.field-meta.xml
<CustomField>
    <fullName>Sole_Source_or_Competitive__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Sole Source or Competitive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Source</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>