force-app/main/default/objects/Provision__c/fields/Start_Date_of_Annual_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Annual_Maintenance__c</fullName>
    <label>Annual Maintenance to begin?</label>
    <length>45</length>
    <type>Text</type>
</CustomField>