force-app/main/default/objects/Provision__c/fields/Stated_Renewel__c.field-meta.xml
<CustomField>
    <fullName>Stated_Renewel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stated Renewal</label>
    <type>Checkbox</type>
</CustomField>