force-app/main/default/objects/Provision__c/fields/Subscription_Fee_per_Truck__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee_per_Truck__c</fullName>
    <label>Subscription Fee per Truck</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>