force-app/main/default/objects/Provision__c/fields/Subscription_Stated_Renew__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Stated_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Stated Renew</label>
    <type>Checkbox</type>
</CustomField>