force-app/main/default/objects/Provision__c/fields/Telecom_Link__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Link__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Telecom.Link</label>
    <length>40</length>
    <type>Text</type>
</CustomField>