force-app/main/default/objects/Provision__c/fields/Telematics_Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Telematics_Install_Type__c</fullName>
    <label>Telematics Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Train the Trainer</fullName>
            </value>
            <value>
                <fullName>Self Install</fullName>
            </value>
            <value>
                <fullName>Standard Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>