force-app/main/default/objects/Provision__c/fields/Telematics_Provider__c.field-meta.xml
<CustomField>
    <fullName>Telematics_Provider__c</fullName>
    <label>Telematics Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sky Patrol</fullName>
            </value>
            <value>
                <fullName>PeopleNet</fullName>
            </value>
            <value>
                <fullName>RoadNet Telematics</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>Xatanet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>