force-app/main/default/objects/Provision__c/fields/Term_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Maintenance__c</fullName>
    <label>Maintenance Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>